# dj-gadgets

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  ascii-code.cpp  date-time-to-epoch.cpp  deg-to-rad.cpp  double-to-time.cpp  double-to-u8.cpp  epoch-to-date-time.cpp  euler-to-quat.cpp  float-to-u8.cpp  get-time-us.cpp  install-opencv-version.sh  meson.build  quat-to-euler.cpp  quat-to-rot.cpp  rad-to-deg.cpp  rot-to-quat.cpp  tool.sh  u8-to-double.cpp  u8-to-float.cpp
.github/workflows/: check-format.yml
ascii-code/: Makefile  main.c
dj-file/: .clang-format  .editorconfig  CMakeLists.txt  Makefile  cli-arguments.cpp  cli-arguments.h  config.h  file-create.c  file-create.cpp  file-create.h  funcs.c  funcs.h  install.sh  main.c  main.cpp  prompt-msg.c  prompt-msg.cpp  prompt-msg.h  time-fetch.c  time-fetch.cpp  time-fetch.h
double-to-u8/: Makefile  main.c
float-to-u8/: Makefile  main.c
opencv-version/: .clang-format  Makefile
opencv-version/src/: main.cpp
u8-to-double/: Makefile  main.c
u8-to-float/: Makefile  main.c
